# SDLBackend

./: CMakeLists.txt  README.md
debian/: changelog  control  copyright
src/: CMakeLists.txt  Color.cpp  Color.h  MainLoop.cpp  Point.cpp  Point.h  Rect.cpp  Rect.h  RenderableGeometry.h  World.cpp  World.h
tests/: CMakeLists.txt  test_color.cpp  test_entity_creator.cpp  test_main_loop.cpp  test_point.cpp  test_rect.cpp  test_world.cpp
